tests/pass/ret_field.c
struct abc
{
    int a, b, c;
};
struct abc f();
int main() { return f().a; }
