tests/fail/union_init.c
union a_t
{
    int a;
    short b;
    int c;
};
union a_t a = {1, 2};
